fix: navbar z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ main {
 
 nav {
   height: 8rem;
+  z-index: 1000;
 }
 
 /* Parágrafos / itens individuais */
